--- a/public/index.html
+++ b/public/index.html
@@ -10,21 +10,45 @@
       content="Website to showcase personal skills"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/HeroImage.jpg" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Subhadeep Chowdhury | Full Stack Developer Portfolio</title>
+    <meta
+      name="description"
+      content="Subhadeep Chowdhury's portfolio showcasing expertise in full-stack development, AI, cloud solutions, and mobile apps."
+    />
+    <meta
+      name="keywords"
+      content="Full Stack Developer, JavaScript, React, Node.js, Python, Flutter, AI Developer"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Subhadeep Chowdhury</title>
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Person",
+        "name": "Subhadeep Chowdhury",
+        "url": "https://subhadeepchowdhury41.web.app",
+        "sameAs": [
+          "https://www.linkedin.com/in/subhadeep-chowdhury-4a54a0205",
+          "https://github.com/subhadeepchowdhury41"
+        ],
+        "jobTitle": "Full Stack Developer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Futurense Technologies"
+        },
+        "alumniOf": "Indian Institute of Information Technology, Kalyani",
+        "knowsAbout": [
+          "JavaScript",
+          "Python",
+          "React",
+          "AI",
+          "Full Stack Development"
+        ]
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
