--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/HeroImage.jpg" />
 
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="2_5Z4id-9ZsTVW9g8UJ5OoNLgicAQhV0IGi1pMjdA24" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Subhadeep Chowdhury | Full Stack Developer Portfolio</title>
     <meta
